Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113992

QTWebEngine crash when not working proxy is set

XMLWordPrintable

    • Linux/X11, Windows
    • 4a79ac857 (dev), 00da7d8d8 (6.5), 1a301c8ff (6.6)

      Using quicknanobrowser example in main.cpp adding these lines:

      QNetworkProxy networkProxy = QNetworkProxy::applicationProxy();    networkProxy.setHostName("187.546.908.982");
      networkProxy.setPort(69);
      networkProxy.setUser("");
      networkProxy.setPassword("");
      networkProxy.setType(QNetworkProxy::ProxyType::HttpProxy);
      QNetworkProxy::setApplicationProxy(networkProxy);

      before

          QQmlApplicationEngine appEngine;
          appEngine.load(QUrl("qrc:/ApplicationRoot.qml"));

      and on launch application crashes with the following errors in console

      [14488:17504:0528/201748.237:ERROR:validation_errors.cc(117)] Invalid message: VALIDATION_ERROR_DESERIALIZATION_FAILED
      [14488:17504:0528/201748.238:ERROR:interface_endpoint_client.cc(694)] Message 1861446869 rejected by interface network.mojom.NetworkService

      also, a similar crash is encountered on not stable proxies. 

        For Gerrit Dashboard: QTBUG-113992
        # Subject Branch Project Status CR V

            mnegyokru Martin Negyokru
            ricta Riccardo Tani
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes