Validate QNetworkProxy::applicationProxy configs

Invalid proxy settings may result in a crash in chromium.
Use chromium's helper function that validates proxy configs
instead of constructing net::ProxyServer manually.
On invalid input, result will be a `SCHEME_INVALID` ProxyServer.

Fixes: QTBUG-113992
Pick-to: 6.5 6.6
Change-Id: I1745ae3c3cd4da40d3d8b92a14f752ac9b3f8d31
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>